--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>Welcome to module2</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<script src="jquery/3.2.1/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+ <link rel="stylesheet" href="https://github.com/LindaLing96/Module2/blob/master/bootstrap.min.css">
+<script src="https://github.com/LindaLing96/Module2/blob/master/jquery-3.2.1.min.js"></script>
+<script src="https://github.com/LindaLing96/Module2/blob/master/bootstrap.min.js"></script>
 <style>
 h1 {
     color: Black;
