--- a/text.html
+++ b/text.html
@@ -12,7 +12,7 @@
 
 <div class="jumbotron text-center">
   <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+  <p>Welcome to Mudule 2！</p> 
 </div>
   
 <div class="container">
